--- a/m5l3.html
+++ b/m5l3.html
@@ -222,6 +222,7 @@
             <div class="slide-content text-center">
                 <h1 class="text-4xl lg:text-5xl font-extrabold text-indigo-700 leading-tight">Module 5: Database Management System</h1>
                 <h2 class="text-2xl lg:text-3xl font-semibold text-gray-800 mt-2">Lesson 3: DBMS Types</h2>
+                <h4 class="text-gray-700 mt-2">by Gerald Villaran</h4>
                 <p class="text-lg text-gray-600 mt-4 max-w-2xl mx-auto">Exploring the different architectures for managing data, from traditional relational models to modern flexible systems.</p>
             </div>
         </div>
