--- a/m5l2-revamp.html
+++ b/m5l2-revamp.html
@@ -222,6 +222,7 @@
             <div class="slide-content text-center">
                 <h1 class="text-4xl lg:text-5xl font-extrabold text-indigo-700 leading-tight">Module 5: Database Management System</h1>
                 <h2 class="text-2xl lg:text-3xl font-semibold text-gray-800 mt-2">Lesson 2: DBMS and its Key Functions</h2>
+                <h4 class="text-gray-700 mt-2">by Gerald Villaran</h4>
                 <p class="text-lg text-gray-600 mt-4 max-w-2xl mx-auto">Understanding the software that makes databases powerful and usable.</p>
             </div>
         </div>
